test: wish 관련 테스트코드 전체 수정